[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-playground"
version = "0.1.0"
description = "Tokyo restaurant search application"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "beautifulsoup4==4.12.2",
    "Requests==2.31.0",
    "selenium==4.12.0",
    "openai==0.27.2",
    "python-dotenv==1.0.0",
    "flask",
    "flask-cors",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
